# dvisvgm

./: .appveyor.yml  .gitattributes  .gitignore  .hgignore  .hgtags  .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  CNAME  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  appveyor.yml  cmdline.c  config.h  config.h.in  config.status  configure  configure.ac  index.html  index.xml  makehead  prepare  table.txt
.github/: FUNDING.yml
.github/workflows/: c-cpp.yml
Clipping/: index.html
Clipping/images/: ion-beam2.svgz
Contact/: index.html
Downloads/: index.html
Examples/: index.html
Examples/images/: calendar.svgz
FAQ/: index.html
Gradients/: index.html
Gradients/images/: tp1.svgz  tp4.svgz  trp2.svgz  trp3.svgz
Links/: index.html
Literature/: index.html
Manpage/: dvisvgm.epub  index.html
News/: index.html
Screenshots/: index.html
autom4te.cache/: output.0  traces.0
clipper/: Makefile.am  clipper.cpp  clipper.hpp
css/: bootstrap.min.css  fork-awesome.min.css  fork-awesome.min.css.map  style.css
doc/: Makefile  Makefile.am  Makefile.in  conf-dblatex-man.xsl  conf-dblatex-pdf.xsl  db2html.xsl  dvisvgm.1  dvisvgm.1.in  dvisvgm.css  dvisvgm.sty  dvisvgm.txt  dvisvgm.txt.in  dvisvgm.xpr  generate-dvisvgm-sty.xsl  tweak-db-article.xsl  tweak-db-refentry.xsl  tweak-dblatex-pdf.xsl  tweak-dblatex-tex.py
docs/: index.html
docs/clipping/: index.html
docs/gradients/: index.html
docs/images/: ion-beam1.svgz  tp2.svgz  tp3.svgz  trp1.svgz  trp4.svgz
fedora/: dvisvgm-0.8.1-potrace.patch  dvisvgm-gs.patch  dvisvgm-potrace.patch  dvisvgm.spec
fonts/: forkawesome-webfont.eot
gzstream/: Makefile
js/: site.js
libs/: CMakeLists.txt  Makefile.am  defs.am
libs/boost/: CMakeLists.txt  Makefile.am
libs/brotli/: CMakeLists.txt  Makefile.am
libs/clipper/: CMakeLists.txt  Makefile.am  clipper.cpp
libs/ff-woff/: Makefile.am  README.md
libs/ff-woff/fontforge/: fontforge.h  splinefont.h  tmpfile2.cpp
libs/ff-woff/inc/: ffintl.h
libs/md5/: CMakeLists.txt  Makefile.am
libs/potrace/: CMakeLists.txt  Makefile.am
libs/variant/: CMakeLists.txt  Makefile.am
libs/woff2/: CMakeLists.txt  Makefile.am
libs/woff2/brotli/: Makefile.am
libs/woff2/brotli/enc/: Makefile.am
libs/woff2/include/woff2/: output.h  version.h
libs/woff2/src/: Makefile.am  normalize.cc  woff2_enc.cc
libs/xxHash/: CMakeLists.txt  Makefile.am  xxhash.c  xxhash.h
m4/: Makefile.am  ax_code_coverage.m4
map/: cork-lm.map
potracelib/: Makefile.am  auxiliary.h  bitmap.h  bitops.h  curve.c  curve.h  decompose.c  decompose.h  flate.c  flate.h  lists.h  potracelib.c  potracelib.h  potracelib.vcproj  progress.h  trace.c  trace.h
src/: AGLTable.h  AGLTable.hpp  BasicDVIReader.cpp  BasicDVIReader.h  BasicDVIReader.hpp  Bezier.cpp  Bezier.h  Bezier.hpp  BgColorSpecialHandler.cpp  BgColorSpecialHandler.h  BgColorSpecialHandler.hpp  Bitmap.cpp  Bitmap.h  Bitmap.hpp  BoundingBox.cpp  BoundingBox.h  BoundingBox.hpp  CLCommandLine.cpp  CLCommandLine.hpp  CLOption.hpp  CMakeLists.txt  CMap.cpp  CMap.h  CMap.hpp  CMapManager.cpp  CMapManager.h  CMapManager.hpp  CMapReader.cpp  CMapReader.h  CMapReader.hpp  CRC32.cpp  CRC32.h  Calculator.cpp  Calculator.h  Calculator.hpp  CharMap.cpp  CharMap.h  CharMapID.cpp  CharMapID.h  CharMapID.hpp  (+376 more)
src/fonts/: Base14Fonts.cpp  Base14Fonts.hpp  Makefile.am
src/optimizer/: AttributeExtractor.cpp  AttributeExtractor.hpp  CMakeLists.txt  ClipPathReassigner.cpp  ClipPathReassigner.hpp  DependencyGraph.hpp  GroupCollapser.cpp  GroupCollapser.hpp  Makefile.am  OptimizerModule.hpp  RedundantElementRemover.cpp  RedundantElementRemover.hpp  SVGOptimizer.cpp  SVGOptimizer.hpp  TextSimplifier.cpp  TextSimplifier.hpp  TransformSimplifier.cpp  TransformSimplifier.hpp  WSNodeRemover.cpp  WSNodeRemover.hpp
src/tests/: CalculatorTest.h  ColorSpecialTest.h  DirectoryTest.h  FileFinderTest.h  FontManagerTest.h  FontMapTest.h  GraphicPathTest.h  KPSFileFinderTest.h  PageSizeTest.h  SplittedCharInputBufferTest.h  StreamCounterTest.h  StreamInputBufferTest.h  VectorStreamTest.h  dvips_test.map
src/ttf/: CmapTable.cpp  CmapTable.hpp  GlyfTable.cpp  GlyfTable.hpp  HeadTable.cpp  HeadTable.hpp  HheaTable.cpp  HheaTable.hpp  HmtxTable.cpp  HmtxTable.hpp  LocaTable.hpp  Makefile.am  MaxpTable.cpp  MaxpTable.hpp  NameTable.cpp  NameTable.hpp  OS2Table.cpp  OS2Table.hpp  PostTable.cpp  PostTable.hpp  TTFAutohint.cpp  TTFAutohint.hpp  TTFTable.cpp  TTFTable.hpp  TTFWriter.cpp  TTFWriter.hpp  VheaTable.cpp  VheaTable.hpp  VmtxTable.cpp  VmtxTable.hpp
tests/: BezierTest.cpp  BitmapTest.cpp  BoundingBoxTest.cpp  CMakeLists.txt  CMapManagerTest.cpp  CMapReaderTest.cpp  CMapTest.cpp  CRC32Test.cpp  CalculatorTest.cpp  CalculatorTest.h  ColorSpecialTest.cpp  ColorSpecialTest.h  ColorTest.cpp  CommandLineTest.cpp  CommandLineTest.h  DVIReaderTest.cpp  DependencyGraphTest.cpp  DirectoryTest.cpp  DirectoryTest.h  DvisvgmSpecialTest.cpp  EllipticalArcTest.cpp  EmSpecialTest.cpp  FileFinderTest.cpp  FileFinderTest.h  FilePathTest.cpp  FileSystemTest.cpp  FontCacheTest.cpp  FontManagerTest.cpp  FontManagerTest.h  FontMapTest.cpp  FontMapTest.h  GFGlyphTracerTest.cpp  GFReaderTest.cpp  GhostscriptTest.cpp  GraphicPathTest.cpp  GraphicPathTest.h  GraphicsPathParserTest.cpp  GraphicsPathTest.cpp  HashFunctionTest.cpp  JFMReaderTest.cpp  (+55 more)
tests/data/: Makefile.am  cmr10.600gf  cmr10.pfb  omarab.ofm  sample_v2.dvi  sample_v3.dvi  upjf-g.ofm
tests/gtest/include/gtest/: gtest.h
tests/gtest/src/: gtest.cc
trunk/: header.txt  info.txt  mkwindist.pl
trunk/doc/: Makefile  Makefile.in
trunk/homepage/: down.html  dvisvgm.css  examples.html  frktest.svgz  index.html  links.html  manpage.html  options.html
trunk/rpm/: Makefile  Makefile.am  Makefile.in  dvisvgm.spec  dvisvgm.spec.in
trunk/src/: A  DVIActions.h  DVIReader.cpp  DVIToSVG.cpp  DVIToSVG.h  DVIToSVGActions.cpp  FileFinder.h  FontEmitter.h  FontInfo.cpp  FontInfo.h  FontMap.h  FontTracer.h  GFReader.cpp  GFReader.h  (+19 more)
vc/: README  config.h  dvisvgm.rc  dvisvgm.sln  dvisvgm.vcxproj  dvisvgm.vcxproj.filters
(+42 files in other folders)
